// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gradientsPlugin should create data with custom keyName function 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"gradients/label__extra":"radial-gradient(rgba(4, 206, 215, 1.00),rgba(100, 106, 230, 1.00),rgba(233, 72, 130, 1.00),rgba(255, 239, 101, 1.00))"};
    "
`;

exports[`gradientsPlugin should write generated date for default config 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {"gradients/label":"radial-gradient(rgba(4, 206, 215, 1.00),rgba(100, 106, 230, 1.00),rgba(233, 72, 130, 1.00),rgba(255, 239, 101, 1.00))"};
    "
`;
